--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,24 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.no-scrollbar::-webkit-scrollbar {
+    display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.no-scrollbar {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+}
+
+
+.container { overflow-y: scroll; /* Enable vertical scrolling */scrollbar-width: none; /* Firefox */ -ms-overflow-style: none; /* Internet Explorer 10+ */ } .container::-webkit-scrollbar { display: none; /* Hide scrollbar */ }
+
+
+
+/* For WebKit browsers (Chrome, Safari, Edge) */
+.container::-webkit-scrollbar {
+  width: 1px; /* Width of the scrollbar */
+}
